# KnibVideo

./: README.md
knib_compress/: autogen.sh  configure.ac
knib_compress/src/: Image.hpp  ImageReader.hpp  KnibFile.hpp  Makefile.am  PackedWorkSet.hpp  PlanarWorkSet.hpp  SetAssembler.hpp  ThreadPool.hpp  WorkSet.hpp  args.c  args.h  main.cpp
knib_read/: Makefile.am  configure.ac
knib_read/src/: Makefile.am  knib_read.c  knib_read.h
